--- a/index.html
+++ b/index.html
@@ -191,25 +191,23 @@ CMS-ID [Tab] External-ID [Tab] MP4-URL [Tab] Dauer (hh:mm:ss)"></textarea>
         </div>
       </details>
 
-      <table id="resultsTable">
-        <thead>
-          <tr>
-            <th>CMS-ID</th>
-            <th>Externe CMS-ID</th>
-            <th>Video-URL</th>
-            <th>Video-ID</th>
-            <th>Dauer (hh:mm:ss)</th>
-            <th>Outro-Start (mm:ss)</th>
-            <th>Outro-Start (s)</th>
-            <th>Erkanntes Muster</th>
-            <th>Intro-Start (mm:ss)</th>
-            <th>Intro-Start (s)</th>
-            <th>Konfidenz</th>
-            <th>Score</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
+   <table id="resultsTable">
+    <thead>
+      <tr>
+        <th>CMS-ID</th>
+        <th>Externe CMS-ID</th>
+        <th>Video-URL</th>
+        <th>Dauer (hh:mm:ss)</th>
+        <th>Outro-Start (mm:ss)</th>
+        <th>Erkanntes Muster</th>
+        <th>Intro-Start (mm:ss)</th>
+        <th>Match (Konf./Score)</th>
+        <th>Test</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>    
+        
 
       <div class="row row-actions">
         <button id="btnExportCsv" class="btn ghost">CSV exportieren</button>
@@ -243,6 +241,21 @@ CMS-ID [Tab] External-ID [Tab] MP4-URL [Tab] Dauer (hh:mm:ss)"></textarea>
       </div>
     </footer>
   </div>
+
+<!-- Player-Overlay (neu) -->
+<div id="playerOverlay" class="overlay hidden" aria-hidden="true" role="dialog" aria-modal="true">
+  <div class="overlay-content" style="flex-direction:column; align-items:stretch; width:min(900px, 92vw);">
+    <div style="display:flex; align-items:center; justify-content:space-between; gap:12px; margin-bottom:8px;">
+      <div id="playerTitle" style="font-weight:700; color:#0b2f5e;">Vorschau</div>
+      <button id="playerClose" class="btn small ghost">Schließen</button>
+    </div>
+    <video id="player" controls style="width:100%; max-height:70vh; background:#000;"></video>
+    <div style="display:flex; align-items:center; justify-content:space-between; margin-top:8px;">
+      <div id="playerMeta" class="muted"></div>
+      <div></div>
+    </div>
+  </div>
+</div>
 
   <!-- Vendor: UMD globals -->
   <script src="./vendor/ffmpeg/umd/ffmpeg.js"></script>
