--- a/index.html
+++ b/index.html
@@ -243,6 +243,19 @@ CMS-ID [Tab] External-ID [Tab] MP4-URL [Tab] Dauer (hh:mm:ss)"></textarea>
           <summary>Protokoll (aufklappen)</summary>
           <div id="log" style="margin-top:8px;"></div>
         </details>
+          
+        <details class="muted" style="margin-top:8px;">
+  <summary>Lizenzen & Credits</summary>
+  <div style="margin-top:8px; font-size:12px; line-height:1.4">
+    Diese Anwendung verwendet:
+    <ul>
+        <li><a href="https://ffmpeg.org">"FFmpeg</a> (Core, WebAssembly). Lizenz: <a href="https://spdx.org/licenses/GPL-2.0-or-later.html">GPL 2+</a>.</li>
+      <li>FFmpeg JS-Wrapper (@ffmpeg/ffmpeg). Lizenz: <a href="https://opensource.org/license/mit">MIT</a>.</li>
+      <li><a href="https://meyda.js.org/">Meyda</a> (Audio-Features). Lizenz: <a href="https://opensource.org/license/mit">MIT</a>.</li>
+      </ul>
+  </div>
+</details>
+  
       </div>
     </footer>
   </div>
