--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Intro Pattern Matcher</title>
+  <title>Intro-Mustererkennung</title>
   <style>
     :root{
       --brand:#0e56ab;
@@ -122,7 +122,7 @@
 <body>
   <div class="wrap">
     <header>
-      <h1>Intro Pattern Matcher</h1>
+      <h1>Intro-Mustererkennung</h1>
     </header>
 
     <!-- Busy overlay (mit Abbrechen-Link) -->
@@ -240,12 +240,12 @@ CMS-ID [Tab] External-ID [Tab] MP4-URL [Tab] Dauer (hh:mm:ss)"></textarea>
         </details>
 
         <details class="muted" style="margin-top:8px;">
-          <summary>Protokoll (aufklappen)</summary>
+          <summary>Logdatei</summary>
           <div id="log" style="margin-top:8px;"></div>
         </details>
           
         <details class="muted" style="margin-top:8px;">
-  <summary>Lizenzen & Credits</summary>
+  <summary>redits</summary>
   <div style="margin-top:8px; font-size:12px; line-height:1.4">
     Diese Anwendung verwendet:
     <ul>
