--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ CMS-ID [Tab] External-ID [Tab] MP4-URL [Tab] Dauer (hh:mm:ss)"></textarea>
         </details>
           
         <details class="muted" style="margin-top:8px;">
-  <summary>redits</summary>
+  <summary>Lizenzhinweise</summary>
   <div style="margin-top:8px; font-size:12px; line-height:1.4">
     Diese Anwendung verwendet:
     <ul>
