--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     button.iconbtn:hover svg { fill: #1174e4; }
   
   </style>
-  <link rel="icon" href="/favicon.png" type="image/png">
+  <link rel="icon" href="./favicon.png" type="image/png">
 </head>
 <body>
   <div class="wrap">
