--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex">
-  <title>Intro-Mustererkennung</title>
+  <title>Die Intro-Muster-Manufaktur</title>
   <style>
     :root{
       --brand:#0e56ab;
@@ -124,7 +124,7 @@
 <body>
   <div class="wrap">
     <header>
-      <h1>Intro-Mustererkennung</h1>
+      <h1>Die Intro-Muster-Manufaktur</h1>
     </header>
 
     <!-- Busy overlay (mit Abbrechen-Link) -->
