--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     header { margin-bottom: 10px; }
     h1 {
       margin:0 0 8px 0;
-      font-size: 30px; font-weight: 700; letter-spacing:.2px; color:#0b2f5e;
+      font-size: 30px; font-weight: 100; letter-spacing:.2px; color:#666; text-transform: uppercase;
       /* Headline-Font: NDRSansCond zuerst */
       font-family: "NDRSansCond","NDRSans","Roboto","Helvetica Neue",Arial,Helvetica,sans-serif;
     }
@@ -140,7 +140,7 @@
 
     <!-- Karte 1: Muster anlegen -->
     <div class="card">
-      <h2>Intro-Muster und Outro-Dauer</h2>
+      <h2>Neue Intro-Muster erstellen</h2>
 
       <div class="row">
         <label>Name der Serie/Staffel:
@@ -174,7 +174,7 @@
 
     <!-- Karte 2: Muster wählen und prüfen -->
     <div class="card">
-      <h2>Muster auswählen und Videos checken</h2>
+      <h2>Intro-Muster auswählen und Videoliste einfügen</h2>
 
       <div class="row">
         <select id="patternSelect"></select>
