--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ CMS-ID [Tab] External-ID [Tab] MP4-URL [Tab] Dauer (hh:mm:ss)"></textarea>
           </div>
         </details>
           
-        <details id="advanced" class="muted">
+        <details class="muted">
           <summary>Erweiterte Einstellungen</summary>
           <div class="row">
             <label>Head-Fenster (s): <input type="text" id="headWindow" value="180" size="6"></label>
